--- a/01-淡入淡出轮播/index.html
+++ b/01-淡入淡出轮播/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>轮播图淡入淡出效果</title>
-	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 
 	<style type="text/css">
 		*{margin: 0;padding: 0}
